syntax = "proto3";
package v1.book;

option go_package = "github.com/SeoEunkyo/gRPC-golang/protos/v1/book";

// Book이라는 서비스를 정의
service Book {
  rpc GetBook(GetBookRequest) returns (GetBookResponse);
}
// 메세지형태를 정의
// reserved는 해당수는 여기서 3~4는 추후에 사용하겠다
message BookMessage {
  reserved 3 to 4;
  int32 id = 1;
  string title = 2;
  string Description =5;
  string writer = 6;
}
// 입력받을 파라미터를 정의 -> id를 받아서 해당하는 정보를 조회 해서 리턴
message GetBookRequest {
  int32 id = 1;
}
// 응답시에 보내게될 정보
// repeated 는 "배열형태로 응답하겠다" 라는 의미
//repeated BookMessage book_message = 1;
message GetBookResponse {
  BookMessage book_message = 1;
}

